css/brandon-style.css
.skills-container {
	display: flex;
	justify-content: center;
}
.skills-icon {
	height: 100px;
	width: 100px;
}
.skill-icon-area > h5 {
	text-align: center;
}
.skill-icon-area {
	text-align: center;
}

.col-xs-6 {
    width: 50%;
}

